--- a/src/App.css
+++ b/src/App.css
@@ -42,28 +42,30 @@
 }
 
 .container {
-  position: relative;
-  width: 500px;
-  height: 500px;
-  }
-
-.stomach {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+}
+
+.stomach, .belly-button {
+  max-width: 100%;
+  height: auto;
 }
 
 .belly-button {
   position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50px;
-  height: 50px;
+  top: 50%;
 }
 
 .star {
+  width: 80%;
+  height: auto;
+  max-width: 250px;
   position: absolute;
-  top: 70%;
+  top: 52%;
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none; /* Ensure the star does not interfere with interactions */
@@ -80,10 +82,20 @@
 .button-container {
   text-align: center;
   margin-top: 20px;
+  position: absolute;
+  bottom: 5%;
+  left: 10%;
+  width: 80%;
 }
 
 .pick-button {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  width: 80%;
+  height: 50px;
+}
+
+.container {
+  height: 100%;
 }
