--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,10 @@ button {
   background-color: #623162;
   color: white;
 }
+
+body {
+  margin:0px;
+  width:100vw;
+  height:100vh;
+  overflow:auto;
+}
